# risk-dashboard

./: LICENSE
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_fallback.py  test_proxy.py  test_race.py
backend/app/: config.py  main.py  schemas.py
backend/app/api/: __init__.py  risk.py  routes.py
backend/app/services/: arcgis.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_risk_api.py  test_routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/Map/: MapComponent.jsx
frontend/src/components/Sidebar/: Sidebar.jsx
